@@ -1,3 +1,8 @@
+2005-10-06  Richard Henderson  <rth@redhat.com>
+
+	* config/rs6000/rs6000.c (rs6000_cannot_force_const_mem): New.
+	(TARGET_CANNOT_FORCE_CONST_MEM): Use it.
+
 2005-10-06  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR middle-end/22216
